refactor: 장바구니 추가 흐름과 오류 계약 정리(#10)
장바구니 추가 흐름을 계층별 구조로 정리하고 공통 ErrorCode 계약을 적용한다.