@@ -2,22 +2,20 @@ package com.book.core.cart.domain;
 
 import com.book.common.domain.BaseEntity;
 import com.book.common.exception.CoreException;
-import com.book.common.exception.ErrorType;
+import com.book.common.exception.ErrorCode;
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
-import jakarta.persistence.Transient;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 
-/** 회원 장바구니의 상품 추가 규칙과 상품 수 제한을 관리합니다. */
 @Entity
 @Table(name = "carts")
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
@@ -26,45 +24,35 @@ import lombok.experimental.Accessors;
 public class Cart extends BaseEntity {
     private static final int MAX_ITEM_COUNT = 30;
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
     @Column(name = "user_id", nullable = false)
     private Long userId;
 
-    @Transient
+    @OneToMany(mappedBy = "cart", cascade = CascadeType.ALL, orphanRemoval = true)
     private List<CartItem> items = new ArrayList<>();
 
     public Cart(final Long id, final long userId, final List<CartItem> items) {
-        this.id = id;
+        super(id);
         this.userId = userId;
         this.items = new ArrayList<>(items);
     }
 
+    public static Cart of(final long userId) {
+        return new Cart(null, userId, new ArrayList<>());
+    }
+
     public List<CartItem> items() {
-        return List.copyOf(items);
+        return Collections.unmodifiableList(this.items);
     }
 
-    public void loadItems(final List<CartItem> items) {
-        this.items = new ArrayList<>(items);
+    public boolean isFull() {
+        return items.size() >= MAX_ITEM_COUNT;
     }
 
-    public CartItem add(final long productId, final int quantity) {
-        CartItem.requireQuantity(quantity);
-        final var existing = items.stream()
-                .filter((final var item) -> item.productId() == productId)
-                .findFirst();
-        if (existing.isPresent()) {
-            final var replaced = existing.get().replaceQuantity(quantity);
-            items.set(items.indexOf(existing.get()), replaced);
-            return replaced;
+    public CartItem addItem(CartItem cartItem) {
+        if (isFull()) {
+            throw new CoreException(ErrorCode.CART_ITEM_LIMIT_EXCEEDED);
         }
-        if (items.size() >= MAX_ITEM_COUNT) {
-            throw new CoreException(ErrorType.CART_ITEM_LIMIT_EXCEEDED);
-        }
-        final var item = new CartItem(null, productId, quantity);
-        items.add(item);
-        return item;
+        items.add(cartItem);
+        return cartItem;
     }
 }
